--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "author": "fito_segrera",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "socket.io": "^1.3.7"
   }
 }
